[tool.poetry]
name = "prova engenharia de dados - planilha de compras"
version = "0.1.0"
description = "Teste técnico para a vaga Engenheiro de Dados - ASAAS"
authors = ["matheusaltoe1@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
gspread = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
